# SmartHomeSystem

./: .editorconfig  .gitattributes  .gitignore  README.md  README.wd.docx  doc.docx  schedul.txt  text.css
SHSapp/SHSapp/: CMakeLists.txt  main.cpp  mainwindow.ui.autosave  tcpclient.cpp  tcpclient.cpp.autosave  tcpclient.h
SHSdocumentation/: README.md
SHSdocumentation/Code/: shs_doc_API.md  shs_doc_ByteCollector.md  shs_doc_ControlWiFi.md  shs_doc_DTP.md  shs_doc_DTPbus.md  shs_doc_ID.md  shs_doc_IP.md  shs_doc_Load.md  shs_doc_Load_API.md  shs_doc_Process.md  shs_doc_ProgramTime.md  shs_doc_SensorAPI.md  shs_doc_TcpServer.md  shs_doc_TcpSocket.md  shs_doc_Timer.md  shs_doc_UDPbus.md  shs_doc_debug.md  shs_doc_version.md
SHSdocumentation/Code/SHScore_doc/: shs_doc_ByteCollector.md  shs_doc_CRC.md  shs_doc_DTPdiscover.md  shs_doc_DTPpacket.md  shs_doc_LoadVirtual.md  shs_doc_Sensor.md  shs_doc_SensorVirtual.md  shs_doc_SimpleFixed.md  shs_doc_SortedBuf.md  shs_doc_TimedData.md  shs_doc_UDP.md  shs_doc_algorithm.md  shs_doc_qt_TcpSocket.md  shs_doc_qt_UDP.md  shs_doc_types.md  shs_doc_utils.md
SHSdocumentation/Hardware/: electronic_components.md  microcontrollers.md  power_components.md  sensors.md
SHSdocumentation/ProjectOverview/: 10_user_interaction.md  11_system_training[deprecated].md  12_system_setting[deprecated].md  1_introduction.md  2_literature.md  3_resources.md  4_development_methods.md  6_module_development[deprecated].md  7_core_development.md  8_library_development[deprecated].md  9_communication_modules[deprecated].md  README.md  SmartHomeSystem_сonference_report.docx
SHSdocumentation/Usage/: build_manual.md  system_creation_guide.md
SHSdocumentation/Usage/guide_data/: component-device-module.xmind  guide_system.xmind
SHSdocumentation/docs/: SmartHomeSystem_conference_report.docx  doc.docx
SHSlibrary/: ByteCollector.h  OTAupdate.h  SHSByteCollector.h  SHSTcpClient.cpp  SHSTcpClient.h  SHSVoiseRecognition.cpp  SHSVoiseRecognition.h  SHSalgoritm.cpp  SHSalgoritm.h  SHSconfig.h  SHSconnectWiFi.h  SHSdtp.cpp  SHSdtp.h  SHSfs.h  SHSlibrary.h  SHSmodule.cpp  SHSmodule.h  SHSupdate.cpp  SHSupdate.h  connectWiFi.h  data.cpp  data.h  settings.h
SHSlibrary/development/: bot_debbuger.cpp  devsettings.h
SHSlibrary/test/: BC.cpp  BC.h  func.h  main.cpp
SHSlibrary/test/testCRC/: testCRC.cpp
SHSlibrary/test/testDTP/: testDTP.cpp
SHSlibrary/utils/: SHSconfigBuilder.cpp
SHSlogos/: Print ed.docx
SHSlogos/source/: SHScolors.ai  SHSlogo.ai  github_preview.ai
SHSnerualnet/development/NNdevelopment/: NNdevelopment.sln  NNdevelopment.vcxproj  NNdevelopment.vcxproj.filters
SmartModules/lighter/: lighter.ino
SmartModules/server/: server.ino
SmartModules/server/data/: commands.txt
SmartModules/table/: table.ino
SmartModulesAPI/: TBotCommands.h
awards/: README.md
debugging_sketches/lighter_serialtest/: lighter_serialtest.ino  settings.h
debugging_sketches/server_worktest/: server_worktest.ino
debugging_sketches/table_serialtest/: table_serialtest.ino
debugging_sketches/table_worktest/: table_worktest.ino
devices/chandelier/: chandelier.ino
devices/lighter/: bus.ino  fancontrol.ino  lighter.ino  lighterAPI.h  settings.h
devices/server/: bot.ino  server.ino  settings.h  tcp.ino
devices/smartRGB/: bot.ino  smartRGB.ino
devices/table/: bot.ino  bus.ino  lighterAPI.h  settings.h  sunrise.ino  table.ino  tcp.ino
devices/table/data/: config.shsf
devices/wall/data/: config.shsf
docs/: doc.docx  shs_doc_API.md
pitch/readme_versions/: README 03.03 ed.docx  README 03.03.docx  README 04.03 ed.docx  README 04.03.docx  README 09.02.docx  README 10.02.docx  README 12.02.docx  README 23.02.docx
presentation/: SmartHomeSystem.pptx  plan.txt
presentation/readable/: SmartHomeSystem.pptx
presentation/readme_versions/: README 09.02 ed.docx  README 09.02 red.docx  README 10.02 ed.docx  README 13.02 ed.docx  README 13.02.docx
schemes/: Attiny13_e  Controller.xmind  SHS-project-scheme.xmind  SHSco-SW.xmind  SHScore.xmind  SHSlibrary.xmind  Smart Home Bot.xmind  Smart Home System Struct.xmind  StructSmartHomeSystem.xmind
src/: create.sh  libraries_paths_example.sh  make.sh  tests.sh
src/SHSapp [beta]/SHSapp/: CMakeLists.txt  main.cpp  mainwindow.ui  resources.qrc  tcpclient.cpp  tcpclient.h
src/SHSapp [beta]/SHSapp_development/AppDev/: CMakeLists.txt  Load.qml  Sensor.qml  SwitchHandler.cpp  SwitchHandler.h  WidgetBase.qml  main.cpp  main.qml  qml.qrc  shs.cpp  shs.h  tcp_test.h  timer.h
src/SHSapp [demo]/SHSapp/: main.cpp  tcpclient.h
src/SHSapp/SHSapp/: tcpclient.cpp
src/SHSapp/build-SHSapp-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/: CMakeCache.txt  SHSapp.cbp  cmake_install.cmake
src/SHScore/: CmakeLists.txt  SHSAPI.h  SHSAnalogSensor.cpp  SHSAnalogSensor.h  SHSByteCollector.h  SHSCRC.cpp  SHSCRC.h  SHSCallbackHandler.h  SHSCallbacksKeeper.cpp  SHSCallbacksKeeper.h  SHSErrorsHandler.cpp  SHSErrorsHandler.h  SHSFS.cpp  SHSFS.h  SHSFSAbstract.h  SHSFile.cpp  SHSFile.h  SHSFileAbstract.h  SHSID.h  SHSLoad.cpp  SHSLoad.h  SHSLoadAPI.cpp  SHSLoadAPI.h  SHSLoadKeeper.cpp  SHSLoadKeeper.h  SHSLoadPWM.cpp  SHSLoadPWM.h  SHSLoadSwitch.cpp  SHSLoadSwitch.h  SHSModule.cpp  SHSModule.h  SHSProcess.h  SHSProcesses.cpp  SHSProcesses.h  SHSProcessesKeeper.cpp  SHSProcessesKeeper.h  SHSRandom.h  SHSSensor.cpp  SHSSensor.h  SHSSensorAnalog.cpp  (+121 more)
src/SHScore/development/: bot_debbuger.h
src/SHScore/not use/: SHSvector.h
src/SHScore/test/: BC.h
src/SHSlibrary/: SHSAutoProcesses.cpp  SHSAutoProcesses.h  SHSAutoRun.cpp  SHSAutoRun.h  SHSModule.h  shsL_GRGB_API.h
src/SHSsettings/: shs_settings_template.h
src/SHStests/msvc/SHSFSTests/: CMakeLists.txt  SHSFSTests.cpp
src/SHStests/source/: data.h  (+6 more)
src/SHStests[deprecated]/msvc/SHSCRCTests/: CMakeLists.txt  SHSCRCTests.cpp
src/SmartModulesAPI [beta]/: TableAPI.h
src/demo version/App/DemoApp/: CMakeLists.txt  TCPstream.h  mainwindow.ui
src/examples/guide_system/module_3/GUIapp/: CMakeLists.txt  main.cpp  main.qml  qml.qrc  shs_Engine.cpp  shs_Engine.h
synchronizer/: synchronizer.cpp
(+140 files in other folders)
